# JSON-Validator

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  generate-ssl-certs.ps1  generate-ssl-certs.sh  installer.iss  main.spec  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements-docker.txt  requirements.txt
.github/workflows/: build.yml  ci.yml  validate-pr.yml
UI/: README.md  __init__.py  i18n.py  json_editor.py  json_tree_view.py  main_ui.py  run_ui.bat  run_ui.sh  schema_view.py  splash_screen.py  theme.py
UI/managers/: __init__.py  file_manager.py  validation_manager.py
UI/models/: __init__.py  json_file.py
UI/utils/: __init__.py  path_utils.py
UI/widgets/: __init__.py  config_panel.py  editor_panel.py  file_panel.py  results_panel.py
ci/github/workflows/: ci.yml  release.yml  validate-pr.yml
ci/gitlab/: .gitlab-ci.yml
ci/jenkins/: Jenkinsfile
docs/: CI_CD.md  vdv463-validator-ci-cd.md  vdv463-validator-ui.md  vdv463-validator-web-ui.md
docs/UI/: IMPLEMENTATION.md  QUICKSTART.md  README.md  example_usage.md
nginx/: nginx.conf
rules/: advanced_value_check_rules.yaml  default.yaml  v1.1.0_full_custom.yaml
scripts/: update_schemas.py
src/: __init__.py  validation_rules.py  vdv463_validator.py
tests/: __init__.py  conftest.py  test_advanced_rules.py  test_rules.py  test_schema_hierarchical_layout.py  test_schema_validation_display.py  test_schema_vertical_layout.py  test_validator.py
tests/fixtures/cross_field/: power_violations.json  sem001_test.json  valid_cross_field.json
tests/fixtures/v1.0/invalid/: missing_required_field.json
tests/fixtures/v1.0/valid/: charging_info_minimal.json  charging_request_minimal.json
tests/fixtures/v1.1/invalid/: charging_request_errors.json  invalid_charging_info.json  invalid_datetime.json  multiple_errors_charging_info.json
tests/fixtures/v1.1/valid/: valid_charging_info.json
tests/fixtures/v2.0/valid/: charging_status.json
tests/rules/: test_rules_minimal.yaml  test_rules_strict.yaml
web/backend/: __init__.py  auth.py  database.py  email_service.py  main.py  models.py  requirements.txt  test_api.py  user_routes.py
web/backend/data/: users.db
web/frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js
web/frontend/src/: AdminPanel.jsx  App.jsx  AuthForms.jsx  CodeEditor.jsx  ConfigUpload.jsx  GraphicalJsonView.jsx  JsonVisualizer.jsx  LanguageContext.jsx  LegalPages.jsx  SchemaConfig.jsx  SplashScreen.jsx  index.css  main.jsx
